feat(htmx): integrate axum-htmx as foundation for HTMX support
Integrate axum-htmx v0.8 as the foundation for HTMX functionality,
saving 3-4 weeks of implementation time by leveraging battle-tested
extractors and responders.

Changes:
- Add axum-htmx dependency with auto-vary, guards, and serde features
- Re-export all axum-htmx types in htmx module
- Update prelude with comprehensive HTMX extractors and responders
- Bump MSRV to 1.87.0 (from 1.75.0) to match axum-htmx requirement

What axum-htmx provides (80% of planned functionality):
- Request extractors: HxRequest, HxTarget, HxTrigger, HxBoosted, etc.
- Response helpers: HxRedirect, HxTrigger, HxReswap, HxRetarget, HxPushUrl
- Auto-vary middleware for proper caching
- Request guards for convenience routing
- Event triggering with JSON payloads

What we still need to build (Week 4 extensions):
- HxSwapOob for out-of-band swaps (critical for flash messages)
- HxTemplate trait for automatic partial detection
- HxResponse wrapper enum for unified API

Architecture decisions:
- TAD-013: Use axum-htmx as foundation (documented)
- Updated phase-1-implementation-plan.md Weeks 3-4 timeline
- Created .claude/axum-htmx-analysis.md with full analysis

Benefits:
- 80% feature coverage from mature, maintained library (241 GitHub stars)
- Standards-compliant API (IntoResponseParts)
- Reduced maintenance burden
- Faster time to production

Refs: TAD-013, .claude/axum-htmx-analysis.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ resolver = "2"
 [workspace.package]
 version = "1.0.0-alpha.1"
 edition = "2021"
-rust-version = "1.75.0"
+rust-version = "1.87.0"
 authors = ["Acton Contributors"]
 license = "MIT"
 repository = "https://github.com/GovCraft/acton-htmx"
@@ -38,7 +38,8 @@ governor = "0.8"
 acton-reactive = "1.1.0-beta"
 tokio = { version = "1", features = ["full"] }
 
-# HTMX-specific - Template engine
+# HTMX-specific - Template engine and integration
+axum-htmx = { version = "0.8", features = ["auto-vary", "guards", "serde"] }
 askama = { version = "0.12", features = ["with-axum"] }
 askama_axum = "0.4"
 validator = { version = "0.18", features = ["derive"] }
