feat(workspace): add comprehensive clippy and safety lints
- Add workspace.lints.rust with unsafe_code=forbid and warnings=deny
- Add workspace.lints.clippy with all/pedantic/nursery=deny
- Configure lint priorities to avoid conflicts
- Allow cargo_common_metadata and multiple_crate_versions during alpha
- All crates inherit lints via [lints] workspace = true
- Fix CLI main() to satisfy unnecessary_wraps lint

Ensures production-grade code quality from day one.

--- a/acton-htmx-cli/Cargo.toml
+++ b/acton-htmx-cli/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 repository.workspace = true
 description = "CLI tool for acton-htmx framework"
 
+[lints]
+workspace = true
+
 [[bin]]
 name = "acton-htmx"
 path = "src/main.rs"
