--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,20 @@ members = [
 ]
 resolver = "2"
 
+[workspace.lints.rust]
+unsafe_code = "forbid"
+warnings = "deny"
+missing_docs = "warn"
+
+[workspace.lints.clippy]
+all = { level = "deny", priority = -1 }
+pedantic = { level = "deny", priority = -1 }
+nursery = { level = "deny", priority = -1 }
+cargo = { level = "warn", priority = -1 }
+# Allow during alpha development (these are from the cargo lint group)
+cargo_common_metadata = "allow"
+multiple_crate_versions = "allow"
+
 [workspace.package]
 version = "1.0.0-alpha.1"
 edition = "2021"
