--- a/acton-htmx-macros/Cargo.toml
+++ b/acton-htmx-macros/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 repository.workspace = true
 description = "Procedural macros for acton-htmx"
 
+[lints]
+workspace = true
+
 [lib]
 proc-macro = true
 
