--- a/acton-htmx-macros/Cargo.toml
+++ b/acton-htmx-macros/Cargo.toml
@@ -6,7 +6,11 @@ rust-version.workspace = true
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
+homepage = "https://acton-htmx.dev"
+keywords = ["web", "framework", "htmx", "macros"]
+categories = ["web-programming::http-server"]
 description = "Procedural macros for acton-htmx"
+readme = "../README.md"
 
 [lints]
 workspace = true
