feat(cli): implement Week 11 CLI tooling with project scaffolding
Implement comprehensive CLI tool for project creation and development
workflow management. This completes Week 11 of the implementation plan,
providing developers with a production-ready tool to scaffold new
acton-htmx projects in under 30 seconds.

CLI Commands:
- acton-htmx new <name>: Full project scaffolding with validation
- acton-htmx dev: Development server with optional hot reload
- acton-htmx db migrate: Run SQLx migrations
- acton-htmx db reset: Drop, recreate, and migrate database
- acton-htmx db create <name>: Create new migration file

Project Templates:
- Complete source structure (handlers, models, main.rs)
- Askama HTML templates (base, layouts, auth pages)
- Configuration files (development/production TOML)
- Database migrations (initial users table)
- Static assets (CSS with responsive design)
- Documentation (README with quick start guide)

Developer Experience:
- Beautiful CLI output with colors, spinners, progress indicators
- Project name validation (kebab-case enforcement)
- Directory conflict detection
- Tool availability checks (cargo-watch, sqlx-cli)
- Helpful installation instructions for missing dependencies
- Handlebars template rendering with project context

Code Quality:
- Zero clippy warnings (pedantic + nursery lints)
- 12 tests passing (9 integration + 3 unit tests)
- Template content validation tests
- Comprehensive error handling
- Full rustdoc documentation

Additional Changes:
- refactor(acton-htmx): resolve clippy warnings with functional patterns
- Use map_or_else for Option handling instead of if let/else
- Replace format! push_str with write! macro to avoid allocations
- Add #[must_use] attribute to format_validation_errors function

Test Coverage:
- CLI: Project scaffolding, template generation, name validation
- Templates: Cargo.toml, README, .gitignore, main.rs, SQL, HTML
- All 167 acton-htmx tests still passing
- Zero test failures across workspace

Break

--- a/acton-htmx-cli/Cargo.toml
+++ b/acton-htmx-cli/Cargo.toml
@@ -15,6 +15,10 @@ readme = "../README.md"
 [lints]
 workspace = true
 
+[lib]
+name = "acton_htmx"
+path = "src/lib.rs"
+
 [[bin]]
 name = "acton-htmx"
 path = "src/main.rs"
@@ -34,3 +38,6 @@ handlebars = "6"
 
 # File operations
 walkdir = "2"
+
+[dev-dependencies]
+tempfile = "3"
