--- a/acton-htmx-cli/Cargo.toml
+++ b/acton-htmx-cli/Cargo.toml
@@ -38,6 +38,8 @@ handlebars = "6"
 
 # File operations
 walkdir = "2"
+Inflector = { version = "0.11.4", features = ["heavyweight"] }
+chrono.workspace = true
 
 [dev-dependencies]
 tempfile = "3"
