--- a/acton-htmx/Cargo.toml
+++ b/acton-htmx/Cargo.toml
@@ -58,6 +58,9 @@ multer = { version = "3.1.0", features = ["tokio-io"] }
 bytes = "1.11.0"
 mime = "0.3.17"
 futures-util = "0.3.31"
+infer = { version = "0.19.0", features = ["alloc"] }
+image = { version = "0.25.6", features = ["jpeg", "png", "gif", "webp"] }
+kamadak-exif = "0.6.1"
 
 [dev-dependencies]
 proptest.workspace = true
