feat(upload): implement Phase 2 Week 9 upload UI and file serving
Implement upload form helpers, file serving middleware with range requests,
and comprehensive testing for Week 9 deliverables.

# Upload Form Helpers

- Add FileFieldBuilder with file-specific configuration
  - Accept MIME types and file extensions
  - Multiple file selection support
  - Client-side size hints (max_size_mb)
  - Preview and drag-drop attributes
  - Progress endpoint integration
- Extend FormField with FileFieldAttrs
- Auto-set multipart/form-data enctype for file inputs
- Render file-specific HTML attributes (accept, multiple, data-*)

# File Serving Middleware

- Implement serve_file handler with range request support
  - Parse Range header (bytes=start-end, suffix, open-ended)
  - Return 206 Partial Content for range requests
  - Validate ranges and return 416 Range Not Satisfiable
- Add proper caching headers
  - ETag generation (file-id + size)
  - Last-Modified timestamps
  - Cache-Control with configurable max-age
  - Conditional requests (If-None-Match, If-Range)
- FileServingMiddleware with configuration
  - Access control function support
  - CDN-friendly headers option
  - Configurable cache max-age

# Testing

- Add 7 comprehensive form upload tests
  - File upload field rendering
  - Multiple file selection
  - Preview and drag-drop attributes
  - Progress endpoint integration
  - Multipart encoding auto-detection
  - Help text rendering
- File serving middleware tests
  - ETag generation
  - TODO: Range request parsing tests

# Documentation

- Create docs/guides/06-file-uploads.md
  - Quick start guide
  - Form builder examples
  - File validation best practices
  - Image processing examples
  - File serving configuration
  - Security guidelines
  - Complete upload workflow examples

# Dependencies

- Add httpdate = "1.0.3" for HTTP date formatting

# Quality Metrics

- 270+ tests passing (all modules)
- Zero clippy lints (pedantic + nursery + all targets)
- Production-re

--- a/acton-htmx/Cargo.toml
+++ b/acton-htmx/Cargo.toml
@@ -61,6 +61,7 @@ futures-util = "0.3.31"
 infer = { version = "0.19.0", features = ["alloc"] }
 image = { version = "0.25.6", features = ["jpeg", "png", "gif", "webp"] }
 kamadak-exif = "0.6.1"
+httpdate = "1.0.3"
 
 [dev-dependencies]
 proptest.workspace = true
