--- a/acton-htmx/Cargo.toml
+++ b/acton-htmx/Cargo.toml
@@ -51,7 +51,6 @@ once_cell.workspace = true
 parking_lot.workspace = true
 
 # Crate-specific
-acton-htmx-macros = { path = "../acton-htmx-macros" }
 base64 = "0.22.1"
 cron = "0.15.0"
 multer = { version = "3.1.0", features = ["tokio-io"] }
@@ -78,6 +77,8 @@ proptest.workspace = true
 tokio = { workspace = true, features = ["test-util"] }
 anyhow.workspace = true
 tempfile = "3.23.0"
+axum-test = "18.3"
+mockall = "0.13"
 
 [features]
 default = ["postgres", "redis", "cedar"]
