--- a/acton-htmx/Cargo.toml
+++ b/acton-htmx/Cargo.toml
@@ -71,6 +71,7 @@ time = { workspace = true, features = ["macros"] }
 reqwest = { version = "0.12.24", features = ["json"] }
 cedar-policy = { version = "4.3", optional = true }
 regex = "1.12.2"
+dirs = "6.0.0"
 
 [dev-dependencies]
 proptest.workspace = true
