feat(cli): add optional path argument to dev command and replace cargo-watch with bacon
- Add optional path argument to `acton-htmx dev [PATH]` (defaults to current directory)
- Replace deprecated cargo-watch with actively maintained bacon for hot reload
- Validate project directory exists and contains Cargo.toml before starting
- Display project path in startup message

--- a/acton-htmx-cli/Cargo.toml
+++ b/acton-htmx-cli/Cargo.toml
@@ -16,7 +16,7 @@ readme = "../README.md"
 workspace = true
 
 [lib]
-name = "acton_htmx"
+name = "acton_htmx_cli_lib"
 path = "src/lib.rs"
 
 [[bin]]
