fix(templates): update project templates to use unified acton crate
Update all generated project templates to use the new unified `acton`
crate instead of `acton-htmx`:

- Change dependency from `acton-htmx = "1.0.0-beta.7"` to
  `acton = "1.0.0-beta.8"` in generated Cargo.toml
- Update all `use acton_htmx::` imports to `use acton::`
- Update CLI commands in documentation from `acton-htmx` to `acton htmx`
- Update product name references to "Acton HTMX"
- Keep repository URL as govcraft/acton-htmx

This ensures newly scaffolded projects use the correct unified crate
structure.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ edition = "2021"
 rust-version = "1.83.0"
 authors = ["Acton Contributors"]
 license = "MIT"
-repository = "https://github.com/GovCraft/acton"
+repository = "https://github.com/GovCraft/acton-htmx"
 homepage = "https://acton.dev"
 keywords = ["web", "framework", "htmx", "axum", "hypermedia"]
 categories = ["web-programming::http-server"]
