fix(templates): update project templates to use unified acton crate
Update all project and scaffold templates to reference the newly
published acton-dx crate instead of the old acton naming.

--- a/templates/prometheus/alerts.yml
+++ b/templates/prometheus/alerts.yml
@@ -4,7 +4,7 @@ groups:
     rules:
       # Application availability
       - alert: ApplicationDown
-        expr: up{job="acton-htmx"} == 0
+        expr: up{job="acton-dx"} == 0
         for: 1m
         labels:
           severity: critical
